--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.23.0",
-    "@redocly/cli": "^1.34.2",
+    "@redocly/cli": "^1.34.3",
     "eslint": "^9.23.0",
     "globals": "^16.0.0",
     "nodemon": "^3.1.9",
@@ -40,6 +40,7 @@
     "mongoose": "^8.13.1",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.1",
-    "pino-http": "^10.4.0"
+    "pino-http": "^10.4.0",
+    "swagger-ui-express": "^5.0.1"
   }
 }
